# ReqFastApi

./: .flake8  .gitlab-ci.yml  .pre-commit-config.yaml  ARCHIMATE_LAYER_ANALYSIS.md  ARCHIMATE_SERVICE_MAPPING.md  ARCHITECTURAL_SUMMARY.md  AUDIT_RESULTS_FINAL.md  BUSINESSFUNCTION_SERVICE_IMPLEMENTATION_SUMMARY.md  BUSINESSPROCESS_SERVICE_IMPLEMENTATION_SUMMARY.md  BUSINESSROLE_SERVICE_IMPLEMENTATION_SUMMARY.md  CI_CD_INTEGRATION_GUIDE.md  CI_CD_README.md  CONSTRAINT_SERVICE_IMPLEMENTATION_SUMMARY.md  DOCKER_FIXES.md  DRIVER_SERVICE_IMPLEMENTATION_SUMMARY.md  GOAL_SERVICE_IMPLEMENTATION_SUMMARY.md  IN_PROGRESS_SERVICES_ANALYSIS.md  Jenkinsfile  MICROSERVICES_AUDIT_REPORT.md  MICROSERVICE_IMPLEMENTATION_AUDIT.md  MONITORING_OBSERVABILITY.md  PLATFORM_STATUS_ENDPOINT.md  PRODUCTION_READINESS.md  README_INTEGRATION_TESTS.md  README_MONITORING.md  REQUIREMENT_SERVICE_IMPLEMENTATION_SUMMARY.md  VALIDATION_FRAMEWORK_README.md  VALIDATION_README.md  archimate_service_test.ps1  archimate_test_results.csv  audit_secrets_and_config.py  comprehensive_microservices_validation.py  comprehensive_test_report.ps1  comprehensive_validation_test.py  continuous_validation_framework.py  create_test_jwt.py  db_seed.py  docker-compose.yml  enhanced_integration_tests.py  env.example  (+45 more)
.github/workflows/: dast.yml  dependency-scan.yml  docker-build.yml  docs.yml  performance.yml  sast.yml  sdk_python_ci.yml  validation.yml
docs/SRE/: ALERTS.md  GAMEDAY.md  ONCALL.md
docs/portal/: config.yml  faq.md  glossary.md  index.md
docs/runbooks/: ci_cd_failure.md  db_failover.md  high_error_rate.md  service_outage.md
infrastructure/: DR_POLICY.md  PIPELINES.md
infrastructure/db/: backup.sh  restore.sh
infrastructure/drill/: dr_runbook.md  failover.sh
monitoring/: prometheus_rules.yaml
monitoring/prometheus_alerts/: sre_rules.yaml
ops/auto_remediation/: README.md  chaos_network_partition.sh  chaos_pod_kill.sh  db_readonly_remediation.sh  pipeline_rollback.sh  pod_restart.sh
performance/: BASELINE.md  Dockerfile  TUNING_GUIDE.md  load_test.py  locust.conf
postgres-init/: audit_log.sql  create-missing-dbs.sql  init-microservices.sql  init-users.sql
scripts/: check_critical_health.py  generate_jwt_token.py  generate_validation_summary.py  send_email_alert.py
security/: NETWORK_POLICIES.md
security/compliance/: CHECKLIST.md  generate_report.py
security/vault/: example-secret-injection.yaml
services/admin_service/: README.md  (+4 more)
shared/: env_validator.py
validation_outputs/: validation_report_20250709_123952.md  validation_results_20250709_123952.json
(+534 files in other folders)
